# xrpl-dex-sdk-python

./: .gitignore  LICENSE  README.md  build.sh  example.py  pyproject.toml  test.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: build.sh  conf.py  modules.rst  xrpl_dex_sdk.methods.rst  xrpl_dex_sdk.models.ccxt.rst  xrpl_dex_sdk.models.rst  xrpl_dex_sdk.rst
tests/: __init__.py  test_xrpl_dex_sdk.py  test_xrpl_dex_sdk_python.py  watch_methods.py
tests/fixtures/: responses.py
types/: book_offers.json  fetch_balance.json  fetch_status.json  ledger_index.json
xrpl_dex_sdk/: __init__.py  constants.py  sdk.py
xrpl_dex_sdk/data/: __init__.py  currencies.json  currencies.py  issuers.json  issuers.py  markets.json  markets.py
xrpl_dex_sdk/methods/: __init__.py  cancel_order.py  create_limit_buy_order.py  create_limit_sell_order.py  create_order.py  create_trust_line.py  fetch_balance.py  fetch_canceled_orders.py  fetch_closed_orders.py  fetch_currencies.py  fetch_fees.py  fetch_issuers.py  fetch_l2_order_book.py  fetch_market.py  fetch_markets.py  fetch_my_trades.py  fetch_open_orders.py  fetch_order.py  fetch_order_book.py  fetch_order_books.py  fetch_orders.py  fetch_status.py  fetch_ticker.py  fetch_tickers.py  fetch_trades.py  fetch_trading_fee.py  fetch_trading_fees.py  fetch_transaction_fee.py  fetch_transaction_fees.py  fetch_transfer_rate.py  load_currencies.py  load_issuers.py  load_markets.py  watch_balance.py  watch_my_trades.py  watch_order_book.py  watch_orders.py  watch_status.py  watch_ticker.py  watch_tickers.py  (+1 more)
xrpl_dex_sdk/models/: __init__.py  base_model.py  base_response.py  clients.py  common.py  exceptions.py  wallet.py
xrpl_dex_sdk/utils/: __init__.py  conversions.py  data.py  (+5 more)
xrpl_dex_sdk_python/: __init__.py
(+196 files in other folders)
