[tool.poetry]
name = "xrpl-dex-sdk-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "xrpl_dex_sdk" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
websockets = "^10.3"
xrpl-py = "^1.6.0"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.950"
flake8 = "^4.0.1"
black = "^22.6.0"
types-requests = "^2.27.30"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.isort]
profile = "black"

[virtualenvs]
path = ".venv"