[tool.poetry]
name = "xrpl_dex_sdk"
version = "1.0.0"
description = "Python SDK for interacting with the XRPL decentralized exchange"
authors = ["AktaryTech <info@aktarytech.com>"]
readme = "README.md"
packages = [
    { include = "xrpl_dex_sdk" },
]

[project.urls]
"GitHub" = "https://github.com/AktaryTech/xrpl-dex-sdk-python"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
websockets = "^10.3"
xrpl-py = "^1.6.0"
base58 = "^2.1.1"
pytest-asyncio = "^0.19.0"
pytest = "^7.1.3"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.950"
flake8 = "^4.0.1"
black = "^22.6.0"
types-requests = "^2.27.30"
Sphinx = "^5.3.0"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.isort]
profile = "black"

[virtualenvs]
path = ".venv"